@@ -1,16 +1,24 @@
 # $Id$
-# Author: David Goodger <goodger@python.org>
+# Author: David Goodger, Paul Tremblay, Guenter Milde
+# Maintainer: docutils-develop@lists.sourceforge.net
 # Copyright: This module has been placed in the public domain.
 
 """
-Simple internal document tree Writer, writes Docutils XML.
+Simple document tree Writer, writes Docutils XML according to
+http://docutils.sourceforge.net/docs/ref/docutils.dtd.
 """
 
 __docformat__ = 'reStructuredText'
 
+import sys
+import xml.sax.saxutils
+from StringIO import StringIO
 
 import docutils
-from docutils import frontend, writers
+from docutils import frontend, writers, nodes
+
+
+class RawXmlError(docutils.ApplicationError): pass
 
 
 class Writer(writers.Writer):
@@ -20,9 +28,7 @@ class Writer(writers.Writer):
 
     settings_spec = (
         '"Docutils XML" Writer Options',
-        'Warning: In versions older than 2.7.3 and 3.2.3, the --newlines and '
-        '--indents options may adversely affect whitespace; use them only '
-        'for reading convenience (see http://bugs.python.org/issue4147).',
+        None,
         (('Generate XML with newlines before and after tags.',
           ['--newlines'],
           {'action': 'store_true', 'validator': frontend.validate_boolean}),
@@ -46,7 +52,20 @@ class Writer(writers.Writer):
     output = None
     """Final translated form of `document`."""
 
+    def __init__(self):
+        writers.Writer.__init__(self)
+        self.translator_class = XMLTranslator
+
+    def translate(self):
+        self.visitor = visitor = self.translator_class(self.document)
+        self.document.walkabout(visitor)
+        self.output = ''.join(visitor.output)
+
+
+class XMLTranslator(nodes.GenericNodeVisitor):
+
     xml_declaration = '<?xml version="1.0" encoding="%s"?>\n'
+    # TODO: add stylesheet options similar to HTML and LaTeX writers?
     #xml_stylesheet = '<?xml-stylesheet type="text/xsl" href="%s"?>\n'
     doctype = (
         '<!DOCTYPE document PUBLIC'
@@ -54,21 +73,107 @@ class Writer(writers.Writer):
         ' "http://docutils.sourceforge.net/docs/ref/docutils.dtd">\n')
     generator = '<!-- Generated by Docutils %s -->\n'
 
-    def translate(self):
-        settings = self.document.settings
-        indent = newline = ''
+    xmlparser = xml.sax.make_parser()
+    """SAX parser instance to check/exctract raw XML."""
+    xmlparser.setFeature(
+        "http://xml.org/sax/features/external-general-entities", True)
+
+    def __init__(self, document):
+        nodes.NodeVisitor.__init__(self, document)
+
+        # Reporter
+        self.warn = self.document.reporter.warning
+        self.error = self.document.reporter.error
+
+        # Settings
+        self.settings = settings = document.settings
+        self.indent = self.newline = ''
         if settings.newlines:
-            newline = '\n'
+            self.newline = '\n'
         if settings.indents:
-            newline = '\n'
-            indent = '    '
-        output_prefix = []
+            self.newline = '\n'
+            self.indent = '    '
+        self.level = 0  # indentation level
+        self.in_simple = 0 # level of nesting inside mixed-content elements
+
+        # Output
+        self.output = []
         if settings.xml_declaration:
-            output_prefix.append(
+            self.output.append(
                 self.xml_declaration % settings.output_encoding)
         if settings.doctype_declaration:
-            output_prefix.append(self.doctype)
-        output_prefix.append(self.generator % docutils.__version__)
-        docnode = self.document.asdom().childNodes[0]
-        self.output = (''.join(output_prefix)
-                       + docnode.toprettyxml(indent, newline))
+            self.output.append(self.doctype)
+        self.output.append(self.generator % docutils.__version__)
+
+        # initialize XML parser
+        self.the_handle=TestXml()
+        self.xmlparser.setContentHandler(self.the_handle)
+
+    # generic visit and depart methods
+    # --------------------------------
+
+    def default_visit(self, node):
+        """Default node visit method."""
+        if not self.in_simple:
+            self.output.append(self.indent*self.level)
+        self.output.append(node.starttag(xml.sax.saxutils.quoteattr))
+        self.level += 1
+        if isinstance(node, nodes.TextElement):
+            self.in_simple += 1
+        if not self.in_simple:
+            self.output.append(self.newline)
+
+    def default_departure(self, node):
+        """Default node depart method."""
+        self.level -= 1
+        if not self.in_simple:
+            self.output.append(self.indent*self.level)
+        self.output.append(node.endtag())
+        if isinstance(node, nodes.TextElement):
+            self.in_simple -= 1
+        if not self.in_simple:
+            self.output.append(self.newline)
+
+
+    # specific visit and depart methods
+    # ---------------------------------
+
+    def visit_Text(self, node):
+        text = xml.sax.saxutils.escape(node.astext())
+        self.output.append(text)
+
+    def depart_Text(self, node):
+        pass
+
+    def visit_raw(self, node):
+        if 'xml' not in node.get('format', '').split():
+            # skip other raw content?
+            # raise nodes.SkipNode
+            self.default_visit(node)
+            return
+        # wrap in <raw> element
+        self.default_visit(node)      # or not?
+        xml_string = node.astext()
+        self.output.append(xml_string)
+        self.default_departure(node)  # or not?
+        # Check validity of raw XML:
+        if isinstance(xml_string, unicode) and sys.version_info < (3,):
+            xml_string = xml_string.encode('utf8')
+        try:
+            self.xmlparser.parse(StringIO(xml_string))
+        except xml.sax._exceptions.SAXParseException, error:
+            col_num = self.the_handle.locator.getColumnNumber()
+            line_num =  self.the_handle.locator.getLineNumber()
+            srcline = node.line
+            if not isinstance(node.parent, nodes.TextElement):
+                srcline += 2 # directive content start line
+            msg = 'Invalid raw XML in column %d, line offset %d:\n%s' % (
+                   col_num, line_num, node.astext())
+            self.warn(msg, source=node.source, line=srcline+line_num-1)
+        raise nodes.SkipNode # content already processed
+
+
+class TestXml(xml.sax.ContentHandler):
+
+    def setDocumentLocator(self, locator):
+        self.locator = locator
